@@ -13,7 +13,6 @@ import page.clab.api.global.exception.NotFoundException;
 import page.clab.api.global.validation.ValidationService;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -26,8 +25,8 @@ public class RecruitmentService {
     private final RecruitmentRepository recruitmentRepository;
 
     @Transactional
-    public Long createRecruitment(RecruitmentRequestDto recruitmentRequestDto) {
-        Recruitment recruitment = Recruitment.of(recruitmentRequestDto);
+    public Long createRecruitment(RecruitmentRequestDto requestDto) {
+        Recruitment recruitment = RecruitmentRequestDto.toEntity(requestDto);
         validationService.checkValid(recruitment);
         notificationService.sendNotificationToAllMembers("새로운 모집 공고가 등록되었습니다.");
         return recruitmentRepository.save(recruitment).getId();
@@ -37,13 +36,14 @@ public class RecruitmentService {
     public List<RecruitmentResponseDto> getRecentRecruitments() {
         List<Recruitment> recruitments = recruitmentRepository.findTop5ByOrderByCreatedAtDesc();
         return recruitments.stream()
-                .map(RecruitmentResponseDto::of)
-                .collect(Collectors.toList());
+                .map(RecruitmentResponseDto::toDto)
+                .toList();
     }
 
-    public Long updateRecruitment(Long recruitmentId, RecruitmentUpdateRequestDto recruitmentUpdateRequestDto) {
+    @Transactional
+    public Long updateRecruitment(Long recruitmentId, RecruitmentUpdateRequestDto requestDto) {
         Recruitment recruitment = getRecruitmentByIdOrThrow(recruitmentId);
-        recruitment.update(recruitmentUpdateRequestDto);
+        recruitment.update(requestDto);
         validationService.checkValid(recruitment);
         return recruitmentRepository.save(recruitment).getId();
     }
